Added image contents

--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
+        <main>
+            <div class="left">
+                <div class="logo">
+                    <img src="assets/odin-lined.png" alt="">
+                    <h1>ODIN</h1>
+                </div>
+                <div>
+                    <h1>Photo by Haile West on Unsplash</h1>
+                </div>
+            </div>
+            <div class="right">
+
+            </div>
+        </main>
     </body>
 </html>
