--- a/index.html
+++ b/index.html
@@ -4,8 +4,60 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <link rel="stylesheet" href="reset.css" />
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
+        <div class="logo">
+            <div>
+                <img src="assets/odin-lined.png" alt="">
+                <h1>ODIN</h1>
+            </div>
+
+            <div>Photo by <a href="#">Haile West</a> on <a href="#">Unsplash</a></div>
+        </div>
+        <div class="content">
+            <div></div>
+
+            <div>
+                <h1>Let's do this!</h1>
+                <form action="">
+
+                    <div>
+                        <div class="input">
+                            <label for="first_name">FIRST NAME</label>
+                            <input type="text" id="first_name">
+                        </div>
+                        <div class="input">
+                            <label for="last_name">LAST NAME</label>
+                            <input type="text" id="last_name">
+                        </div>
+                    </div>
+                    <div>
+                        <div class="input">
+                            <label for="user_email">EMAIL</label>
+                            <input type="email" id="user_email">
+                        </div>
+                        <div class="input">
+                            <label for="phone_number">PHONE NUMBER</label>
+                            <input type="tel" id="phone_number">
+                        </div>
+                    </div>
+                    <div>
+                        <div class="input">
+                            <label for="user_password">PASSWORD</label>
+                            <input type="password" id="user_password">
+                        </div>
+                        <div class="input">
+                            <label for="confirm_password">CONFIRM PASSWORD</label>
+                            <input type="password" id="confirm_password">
+                        </div>
+                    </div>
+
+                </form>
+            </div>
+
+            <div></div>
+        </div>
     </body>
 </html>
