--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
             <div>
                 <div class="button-section">
-                    <button>Create Account</button>
-                    <h3>Already have an account? <a href="#">Log in</a></h3>
+                    <button id="create-account">Create Account</button>
+                    <h3>Already have an account? <a href="#" id="login">Log in</a></h3>
                 </div>
             </div>
 
